--- a/package.json
+++ b/package.json
@@ -3,12 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
+    "material-table": "^1.69.3",
+    "papaparse": "^5.3.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0-rc.1",
+    "react-csv-to-table": "^0.0.4",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.0.1",
     "react-scripts": "4.0.3",
+    "react-table": "^7.7.0",
+    "reactstrap": "^9.0.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
